--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 @import url("main.css");
 @import url("reset.css");
-
+body,
+html {
+  box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
