--- a/css/about-me.css
+++ b/css/about-me.css
@@ -20,18 +20,56 @@
   width: 1200px;
   margin: 0 auto;
   display: flex;
-  padding: 110px 0;
+  padding: 140px 0;
   color: #fff;
   position: relative;
 }
 .aboutme__container .portfolio__btn {
-  font-size: 45px;
+  font-size: 30px;
   font-weight: 600;
   text-transform: uppercase;
   position: absolute;
-  right: 0;
-  top: 60px;
+  right: 00px;
+  top: 50px;
   cursor: pointer;
+  letter-spacing: 1px;
+  transition: color 0.3s ease-in-out;
+}
+.aboutme__container .portfolio__btn:hover {
+  color: #4392e2;
+}
+.portfolio__btn p {
+  display: inline-block;
+}
+.portfolio__btn .arrow {
+  /* transform: translateX(100px); */
+  /* margin-right: -10px; */
+  display: inline-block;
+  transform: translateX(0px);
+  transition: transform 0.3s ease-in-out;
+}
+.portfolio__btn:hover .arrow {
+  transform: translateX(10px);
+}
+.portfolio__btn .bar {
+  width: 20px;
+  height: 4px;
+  border-radius: 10px;
+  background-color: #4392e2;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  transform: translate(-100px, -0.5px);
+  opacity: 0;
+  transition-property: transform, opacity;
+  transition-duration: 0.3s, 0.2s;
+  transition-timing-function: ease-in-out;
+  /* transition-delay: 0, 10s; */
+  /* transition: transform 0.3s ease-in-out; */
+}
+.portfolio__btn:hover .bar {
+  transform: translate(-15px, -0.5px);
+  opacity: 1;
 }
 .aboutme__profile {
   width: 196px;
@@ -77,16 +115,21 @@
 .profile__blog .blog__content,
 .profile__github .github__content {
   padding-left: 10px;
+  transition: color 0.2s ease-in-out;
+}
+.blog__content:hover,
+.github__content:hover {
+  color: #4392e2;
 }
 
 .content__intro .intro__title {
-  color: #eef13d;
+  color: #4392e2;
   font-size: 30px;
   font-weight: bold;
   line-height: 39px;
 }
 .content__intro .intro__detail {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: lighter;
   line-height: 28px;
   padding: 30px 0 70px 0;
@@ -96,6 +139,7 @@
   font-size: 30px;
   font-weight: bold;
   height: 70px;
+  color: #4392e2;
 }
 .skill__list {
   display: flex;
@@ -112,6 +156,7 @@
 }
 .skill__item:last-child {
   /* flex-grow: 1; */
+  padding-top: 20px;
 }
 .skill__item .item__title {
   font-size: 22px;
