--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-body,
-html {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
 .portfolio {
   width: 100%;
   height: 100%;
@@ -17,6 +11,7 @@ html {
   right: 15%;
   top: 50px;
   font-weight: bold;
+  cursor: pointer;
 }
 .aboutme__btn:hover {
   color: #4392e2;
@@ -101,7 +96,7 @@ html {
     transform: translateX(0%);
   }
   to {
-    transform: translateX(-100%);
+    transform: translateX(-38%);
   }
 }
 .main-swiper {
@@ -131,6 +126,7 @@ html {
   background-repeat: no-repeat;
   background-position: top center;
   overflow: hidden;
+  /* pointer-events: none; */
 }
 /* .main-swiper .main-slide1 {
   background-image: url("../images/web.jpg");
@@ -144,13 +140,13 @@ html {
   position: absolute;
   width: 1300px;
   z-index: -1;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 .swiper-slide-active .slide1__img {
-  animation: scroll 200s linear infinite;
+  animation: scroll 300s linear infinite;
 }
 .swiper-slide-active .slide2__img {
-  animation: scroll 400s linear infinite;
+  animation: scroll 1400s linear infinite;
 }
 .swiper-slide-active:hover .slide1__img {
   animation-play-state: paused;
@@ -165,11 +161,6 @@ html {
   to {
     transform: translateY(-100%);
   }
-}
-.main-swiper .main-slide2 {
-  /* background-image: url("../images/app_styleguide.jpg");
-  background-size: cover;
-  background-position: center top; */
 }
 .main-swiper .main-slide3 {
   background-image: url("../images/kakao_img.jpg");
@@ -333,6 +324,7 @@ html {
   background-repeat: no-repeat;
   background-position: left center;
   top: 110%;
+  outline: none;
 }
 .main-swiper .main-prev {
   left: 100px;
