--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,27 @@ html {
   box-sizing: border-box;
   /* font-family: "SpoqaHanSans"; */
   font-family: "Spoqa Han Sans";
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+}
+body {
+  position: relative;
+  top: 0;
+  /* transform: translateX(0px); */
+  transition: transform 0.5s ease-in-out;
+}
+body.second {
+  /* transform: translateX(-1800px); */
+  /* left: -50%; */
+}
+.aboutme,
+.portfolio {
+  width: 100%;
+  height: 100%;
+}
+a {
+  color: white;
 }
 *,
 *::after,
