--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,7 +1,6 @@
 .aboutme {
   width: 100%;
   height: 100%;
-  background-color: rgba(23, 23, 23, 0.9);
   position: relative;
   z-index: 2;
 }
@@ -17,7 +16,7 @@
   padding: 0 0 0px 20px;
 }
 .aboutme__container {
-  width: 1200px;
+  width: 65%;
   margin: 0 auto;
   display: flex;
   padding: 140px 0;
